# online_problems

./: .gitignore  README.md
advent_of_code_2015/day01/: Cargo.toml
advent_of_code_2015/day02/: Cargo.toml
advent_of_code_2015/day03/: Cargo.toml
advent_of_code_2015/day04/: Cargo.toml
advent_of_code_2015/day05/: Cargo.toml
advent_of_code_2015/day06/: Cargo.toml
advent_of_code_2015/day07/: Cargo.toml
advent_of_code_2016/: aoc.hsfiles  template.hsfiles
advent_of_code_2016/day1/: day1.cabal  package.yaml  stack.yaml
advent_of_code_2016/day10/: day10.cabal  example.html  package.yaml  stack.yaml
advent_of_code_2016/day13/: day13.cabal  package.yaml  stack.yaml
advent_of_code_2016/day16/: day16.cabal  package.yaml
advent_of_code_2016/day16rs/: Cargo.toml
advent_of_code_2016/day19/: day19.cabal  package.yaml  stack.yaml
advent_of_code_2016/day2/: day2.cabal  package.yaml
advent_of_code_2016/day3/: day3.cabal  package.yaml
advent_of_code_2016/day4/: day4.cabal  package.yaml
advent_of_code_2016/day5/: day5.cabal  package.yaml
advent_of_code_2016/day6/: day6.cabal  package.yaml
advent_of_code_2016/day7/: day7.cabal  package.yaml
advent_of_code_2016/day8/: day8.cabal  package.yaml
advent_of_code_2016/day9/: day9.cabal  package.yaml
advent_of_code_2018/day01/: day01.cabal  day1.cabal  package.yaml
advent_of_code_2018/day02/: day02.cabal  day2.cabal  package.yaml
advent_of_code_2018/day03/: day03.cabal  day3.cabal  package.yaml
advent_of_code_2018/day04/: day04.cabal  package.yaml
advent_of_code_2018/day05/: day05.cabal  day5.cabal  package.yaml
advent_of_code_2018/day06/: day06.cabal  package.yaml
advent_of_code_2018/day07/: day07.cabal  day7.cabal  package.yaml
advent_of_code_2018/day08/: day08.cabal  day8.cabal  package.yaml
advent_of_code_2018/day09/: day09.cabal  day9.cabal  package.yaml
advent_of_code_2018/day1/: day1.cabal  package.yaml
advent_of_code_2018/day10/: day10.cabal  package.yaml
advent_of_code_2018/day11/: day11.cabal  package.yaml
advent_of_code_2018/day12/: day12.cabal  package.yaml
advent_of_code_2018/day13/: day13.cabal  package.yaml
advent_of_code_2018/day14/: day14.cabal  package.yaml  stack.yaml
advent_of_code_2018/day16/: day16.cabal  package.yaml
advent_of_code_2018/day18/: day18.cabal  package.yaml
advent_of_code_2018/day2/: package.yaml
advent_of_code_2018/day23/: day23.cabal  package.yaml
advent_of_code_2018/day3/: day3.cabal  package.yaml
advent_of_code_2018/day4/: LICENSE  day4.cabal  package.yaml
advent_of_code_2018/day5/: package.yaml
advent_of_code_2018/day6/: day6.cabal  package.yaml
advent_of_code_2018/day7/: package.yaml
advent_of_code_2018/day8/: package.yaml
advent_of_code_2020/day01/: Main.hs  day01.cabal  day01.lisp
advent_of_code_2020/day01/app/: Main.hs
advent_of_code_2020/day02/: Main.hs  day02.cabal
advent_of_code_2020/day02/app/: Main.hs
advent_of_code_2020/day05/: day05.cabal
advent_of_code_2020/day05/app/: Main.hs
advent_of_code_2020/day08/: Main.hs  day08.cabal
advent_of_code_2020/day08/app/: Main.hs
advent_of_code_2021/: template.cabal  template.hs
advent_of_code_2021/day01/: Main.hs  day01.cabal  day01.pl  day01.py
advent_of_code_2021/day02/: Main.hs  day02.cabal
advent_of_code_2021/day03/: day03.py
advent_of_code_2021/day04/: Main.hs  day04.cabal
advent_of_code_2021/day05/: Main.hs  day05.cabal
advent_of_code_2021/day06/: Cargo.toml  Main.hs  day06.cabal
advent_of_code_2021/day06/src/: main.rs
advent_of_code_2021/day07/: Main.hs  day07.cabal
advent_of_code_2021/day08/: Main.hs  day08.cabal
advent_of_code_2021/day09/: day09.py
advent_of_code_2021/day10/: Main.hs  day10.cabal
advent_of_code_2021/day11/: day11.py
advent_of_code_2021/day14/: Main.hs  day14.cabal
advent_of_code_2021/day15/: day15.py
advent_of_code_2021/day16/: Main.hs  day16.cabal  day16.py
advent_of_code_2021/day17/: Main.hs  day17.cabal
advent_of_code_2021/day18/: Main.hs  day18.cabal
advent_of_code_2021/day20/: day20.py
advent_of_code_2021/day21/: Cargo.toml
advent_of_code_2021/day21/src/: main.rs  part1.rs
advent_of_code_2021/day22/: Main.hs  day22.cabal
advent_of_code_2021/day24/: .flake8  Main.hs  README.md  day24.cabal  day24.py  mypy.ini  pyproject.toml
advent_of_code_2022/day11/: :w  Main.hs  day11.cabal
advent_of_code_2022/day14/: Main.hs  day14.cabal
advent_of_code_2022/day16/: Main.hs  day16.cabal
advent_of_code_2022/day17/: Main.hs  day17.cabal
advent_of_code_2022/day25/: Main.hs  day22.cabal
advent_of_code_2024/day01/: Main.hs  aoc.bqn  aoc.k  day01.cabal
advent_of_code_2024/day03/: Main.hs  day03.cabal
advent_of_code_2024/day05/: Main.hs  aoc.cabal  day05.cabal
advent_of_code_2024/day06/: Cargo.toml  Main.hs  aoc.cabal
advent_of_code_2024/day06/src/: main.rs
advent_of_code_2024/day08/: Main.hs  day08.cabal
advent_of_code_2024/day11/: Main.hs  aoc.cabal  aoc.k
advent_of_code_2024/day17/: Main.hs  aoc.cabal  pyproject.toml
advent_of_code_2024/day17/src/: main.rs
advent_of_code_2024/day17/src/day17/: __init__.py
code_golf/: choose.py
euler/: euler182.py  euler59v2.py  euler64.lisp  euler64.py  nim.c
prog_praxis/: 3_fibs_154.py  BalancedDelimiters.hs  Caesar.hs  HammingNumbers.hs  ackerman.hs  affine_shift.py  approx_pi.py  arithmetic_drill_198.py  array_dups.py  base_26.py  belphegor.ijs  benford_179.py  bingo_003.py  bishop.py  bit_hacks.txt  blum_blum_shub.py  c2.pyx  calc_sines.py  carmichael_197.py  chopping_words.py  chutes.py  code_jam_africa.py  coffee_can.cc  collapse.py  counting_primes_200.hs  craps.lisp  creation.py  credit_card_validation.py  crt_162.c  crt_162.f90  crt_162.scm  crypt.py  cuckoo.py  digits_of_pi.jl  digits_of_pi.lisp  div_and_tot_188.py  emirps_181.py  eratosthenes.lisp  eratosthenes.py  euler3.py  (+88 more)
reddit/: euler12.py  euler12V2.py  pascal.py
rosalind/: cat.py  cons.py  fib.py  fibd.py  fibd2.cc  fibd2.py  gc.py  grph.py  hamm.py  iev.py  iprb.py  lcsm.py  lcsm2.py  lia.py  prot.py  rosalind.py  skeleton.py  subs.py
unfinished/: prob303.py  prob303.scm
(+732 files in other folders)
