cabal-version:       3.0
name:                day01
version:             0.0.0.0
synopsis:            Day 1, Advent of Code 2020
license:             MIT
author:              Graham Enos <graham.enos@gmail.com>
copyright:           2020 Graham Enos
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , relude

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates

  default-language:    Haskell2010
  default-extensions:  DerivingVia
                       LambdaCase
                       OverloadedStrings
                       TupleSections
                       TypeApplications

executable day01
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
