cabal-version:       3.0
name:                day05
version:             0.0.0.0
synopsis:            Day 5, Advent of Code 2020
license:             MIT
author:              Graham Enos <graham.enos@gmail.com>
copyright:           2020 Graham Enos
tested-with:         GHC == 8.10.2

common common-options
  build-depends:       base ^>= 4.14.0.0
                     , relude ^>= 0.7.0.0
                     , attoparsec ^>= 0.13.2.4
                     , vector-sized ^>= 1.4.2

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  DerivingVia
                       LambdaCase
                       OverloadedStrings
                       TupleSections
                       TypeApplications

executable day05
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
