cabal-version:      3.0
name:               day02
version:            0.1.0.0
maintainer:         graham.enos@gmail.com
author:             Graham Enos

executable day02
    main-is:          Main.hs
    build-depends:
        attoparsec ^>=0.14,
        base ^>=4.14.3.0,
        linear ^>=1.21,
        text ^>=1.2
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra -O2
