cabal-version:      3.0
name:               day04
version:            0.1.0.0
maintainer:         graham.enos@gmail.com
author:             Graham Enos

executable day04
    main-is:          Main.hs
    build-depends:
        attoparsec ^>=0.14,
        base ^>=4.14.3.0,
        matrix ^>=0.3.6.1,
        text ^>=1.2,
    default-language: Haskell2010
    ghc-options: -Wall -Wextra -O2
