cabal-version:      3.0
name:               day14
version:            0.1.0.0
author:             Graham Enos
maintainer:         graham.enos@gmail.com

executable day14
    main-is:          Main.hs
    build-depends:
        attoparsec ^>=0.14,
        base ^>=4.14.3.0,
        containers ^>=0.6.5.1,
        text ^>=1.2,
    default-language: Haskell2010
    ghc-options: -Wall -Wextra -O2
