cabal-version:      3.0
name:               day16
version:            0.1.0.0
author:             Graham Enos
maintainer:         graham.enos@gmail.com

executable day16
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
    default-language: Haskell2010
    ghc-options: -Wall -Wextra -O2
