cabal-version:      3.0
name:               day17
version:            0.1.0.0
author:             Graham Enos
maintainer:         graham.enos@gmail.com

executable day17
    main-is:          Main.hs
    build-depends:
        attoparsec ^>=0.14,
        base ^>=4.14.3.0,
        text ^>=1.2,
        vector ^>= 0.12.3.1,
    default-language: Haskell2010
    ghc-options: -Wall -Wextra -O2
