cabal-version:      3.0
name:               day24
version:            0.1.0.0
author:             Graham Enos
maintainer:         graham.enos@gmail.com

executable day24
    main-is:          Main.hs
    build-depends:
        attoparsec ^>=0.14.4,
        base ^>=4.14.3.0,
        lens ^>= 5.1,
        sbv ^>=8.17,
        text ^>=2.0,
    default-language: Haskell2010
    ghc-options: -Wall -Wextra -O2
