[tool.poetry]
name = "day24"
version = "0.1.0"
description = ""
authors = ["Graham Enos <graham.enos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
z3-solver = "^4.8.14"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
flake8 = "^4.0.1"
flake8-black = "^0.2.4"
flake8-bugbear = "^22.1.11"
flake8-import-order = "^0.18.1"
mypy = "^0.931"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
