cabal-version:      3.6
name:               day11
version:            0.1.0.0

executable day11
    main-is:          Main.hs
    build-depends:    base ^>=4.17.0.0
                      , attoparsec ^>= 0.14.4
                      , containers ^>= 0.6.6
                      , lens ^>= 5.2
                      , text ^>= 2.0.1
                      , vector ^>= 0.13.0.0
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra
