cabal-version:      3.6
name:               day14
version:            0.1.0.0

executable day14
    main-is:          Main.hs
    build-depends:    base ^>=4.17.0.0
                      , attoparsec ^>= 0.14.4
                      , containers ^>= 0.6.6
                      , lens ^>= 5.2
                      , linear ^>= 1.22
                      , text ^>= 2.0.1
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra -O2
