cabal-version:      3.6
name:               day17
version:            0.1.0.0

executable day17
    main-is:          Main.hs
    build-depends:    base ^>=4.17.0.0
                      , containers ^>= 0.6.6
                      , lens ^>= 5.2
                      , linear ^>= 1.22
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra -O2
