cabal-version:      3.6
name:               day25
version:            0.1.0.0

executable day25
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0
                      , attoparsec ^>= 0.14.4
                      , text ^>= 2.0.2
    default-language: Haskell2010
    ghc-options:      -Wall -Wextra -O2
