cabal-version: 3.6
name: day05
version: 0.1.0.0
license: MIT
author: Graham Enos
maintainer: graham@strangeworks.com

executable day05
  ghc-options:
    -Wall
    -Wextra

  main-is: Main.hs
  build-depends:
    attoparsec ^>=0.14.3,
    base ^>=4.20.0.0,
    containers ^>= 0.7,
    text ^>=2.1.2,
    vector ^>=0.13.2.0,

  default-language: GHC2024
