cabal-version: 3.6
name: day08
version: 0.1.0.0
license: MIT
author: Graham Enos
maintainer: graham@strangeworks.com

executable day08
  ghc-options:
    -Wall
    -Wextra

  main-is: Main.hs
  build-depends:
    base ^>=4.20.0.0,
    containers ^>= 0.7,
    linear ^>= 1.23,

  default-language: GHC2024
