cabal-version: 3.6
name: aoc
version: 0.1.0.0
license: MIT
author: Graham Enos
maintainer: graham@strangeworks.com

executable aoc
  ghc-options:
    -Wall
    -Wextra

  main-is: Main.hs
  build-depends:
    base ^>=4.20.0.0,
    multiset ^>=0.3.4.3,
    number-length ^>=0.2.1.0,

  default-language: GHC2024
