[project]
name = "day17"
version = "0.1.0"
description = "AOC"
authors = [
    { name = "Graham Enos", email = "graham@strangeworks.com" }
]
dependencies = [
    "z3-solver~=4.13.4.0",
    "typer~=0.15.1",
    "pyprojroot~=0.3.0",
]
requires-python = ">= 3.11"

[project.scripts]
day17 = "day17:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter~=1.1.1",
    "pyright~=1.1.390",
    "ruff~=0.8.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/day17"]
